--- a/dev/index.html
+++ b/dev/index.html
@@ -7,65 +7,7 @@
     <!-- (wrapper) -->
     <div class="wrapper">
       <div class="wrapper__content">
-        <!-- (header) -->
-        <header class="header">
-          <div class="header__cover cover">
-            <div class="header__content">
-              <!-- (logo) -->
-              <div class="logo header__logo">
-                <a href="/" class="logo__link">
-                  <img src="images/icon-logo.png" alt="МедИнвестГрупп" class="logo__icon header__logo-icon">
-                </a>
-              </div>
-              <!-- End (logo) -->
-              <!-- (nav) -->
-              <nav class="nav header__nav">
-                <ul class="nav__list">
-                  <li class="nav__item"><!-- доступен класс (active) -->
-                    <a href="#" class="nav__link">География</a>
-                  </li>
-                  <li class="nav__item"><!-- доступен класс (active) -->
-                    <a href="#" class="nav__link">Управление</a>
-                  </li>
-                  <li class="nav__item"><!-- доступен класс (active) -->
-                    <a href="#" class="nav__link">Инвестиции</a>
-                  </li>
-                </ul>
-              </nav>
-              <!-- End (nav) -->
-              <div class="header__contacts">
-                <!-- (call) -->
-                <div class="call header__call">
-                  <a href="#" class="call__link">
-                    <svg class="call__icon">
-                      <use xlink:href="images/icons-sprite.svg#icon-mail"></use>
-                    </svg>
-                    Обратная связь
-                  </a>
-                </div>
-                <!-- End (call) -->
-                <!-- (phone) -->
-                <div class="phone header__phone">
-                  <a href="tel:+74959884770" class="phone__link">
-                    <svg class="phone__icon">
-                      <use xlink:href="images/icons-sprite.svg#icon-phone"></use>
-                    </svg>
-                    +7 495 988-47-70
-                  </a>
-                </div>
-                <!-- End (phone) -->
-                <!-- (pull) -->
-                <div class="pull header__pull" id="pull">
-                  <div></div>
-                  <div></div>
-                  <div></div>
-                </div>
-                <!-- End (pull) -->
-              </div>
-            </div>
-          </div>
-        </header>
-        <!-- End (header) -->
+        @include('./include/header.html');
         <!-- (slider) -->
         <section class="slider">
           <div class="slider__list" id="slider-list">
@@ -259,9 +201,7 @@
                     <div class="news-names__item">
                       <h4 class="news-names__item-name">
                         В Туле построят центр ядерной медицины для диагностики и лечения онкозаболеваний
-                        <svg class="news-names__item-icon">
-                          <use xlink:href="images/icons-sprite.svg#icon-lightning"></use>
-                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.5 20" class="news-names__item-icon"><path d="M7 0L0 11h7l-2 9 8.5-12H6L7 0z"/></svg>
                       </h4>
                     </div>
                     <div class="news-names__item">
@@ -301,31 +241,49 @@
                     <a href="#" class="news-carousel__item-link">
                       <div class="news-carousel__item-label">New</div>
                       <img src="images/content/img-new-1.jpg" alt="В Туле построят центр ядерной медицины для диагностики и лечения онкозаболеваний" class="news-carousel__item-img">
+                      <h4 class="news-carousel__item-name">
+                        В Туле построят центр ядерной медицины для диагностики и лечения онкозаболеваний
+                      </h4>
                     </a>
                   </div>
                   <div class="news-carousel__item">
                     <a href="#" class="news-carousel__item-link">
                       <img src="images/content/img-new-2.jpg" alt="Презентация нового центра «ПЭТ-Технолоджи» в Ярославле" class="news-carousel__item-img">
+                      <h4 class="news-carousel__item-name">
+                        Презентация нового центра «ПЭТ-Технолоджи» в Ярославле
+                      </h4>
                     </a>
                   </div>
                   <div class="news-carousel__item">
                     <a href="#" class="news-carousel__item-link">
                       <img src="images/content/img-new-1.jpg" alt="В Туле построят центр ядерной медицины для диагностики и лечения онкозаболеваний" class="news-carousel__item-img">
+                      <h4 class="news-carousel__item-name">
+                        В Туле построят центр ядерной медицины для диагностики и лечения онкозаболеваний
+                      </h4>
                     </a>
                   </div>
                   <div class="news-carousel__item">
                     <a href="#" class="news-carousel__item-link">
                       <img src="images/content/img-new-2.jpg" alt="Презентация нового центра «ПЭТ-Технолоджи» в Ярославле" class="news-carousel__item-img">
+                      <h4 class="news-carousel__item-name">
+                        Презентация нового центра «ПЭТ-Технолоджи» в Ярославле
+                      </h4>
                     </a>
                   </div>
                   <div class="news-carousel__item">
                     <a href="#" class="news-carousel__item-link">
                       <img src="images/content/img-new-1.jpg" alt="В Туле построят центр ядерной медицины для диагностики и лечения онкозаболеваний" class="news-carousel__item-img">
+                      <h4 class="news-carousel__item-name">
+                        В Туле построят центр ядерной медицины для диагностики и лечения онкозаболеваний
+                      </h4>
                     </a>
                   </div>
                   <div class="news-carousel__item">
                     <a href="#" class="news-carousel__item-link">
                       <img src="images/content/img-new-2.jpg" alt="Презентация нового центра «ПЭТ-Технолоджи» в Ярославле" class="news-carousel__item-img">
+                      <h4 class="news-carousel__item-name">
+                        Презентация нового центра «ПЭТ-Технолоджи» в Ярославле
+                      </h4>
                     </a>
                   </div>
                 </div>
@@ -414,82 +372,12 @@
         <!-- End (partners) -->
       </div>
       <div class="wrapper__footer">
-        <!-- (footer) -->
-        <footer class="footer">
-          <div class="footer__cover cover">
-            <div class="footer__content">
-              <!-- (logo) -->
-              <div class="logo footer__logo">
-                <a href="/" class="logo__link footer__logo-link">
-                  <img src="images/icon-logo.png" alt="МедИнвестГрупп" class="logo__icon footer__logo-icon">
-                </a>
-              </div>
-              <!-- End (logo) -->
-              <div class="footer__navs">
-                <div class="footer__nav-bar footer__nav-bar_one">
-                  <ul class="footer__nav">
-                    <li class="footer__nav-item">
-                      <a href="#" class="footer__nav-link">Инвестиции</a>
-                    </li>
-                    <li class="footer__nav-item">
-                      <a href="#" class="footer__nav-link">География</a>
-                    </li>
-                    <li class="footer__nav-item">
-                      <a href="#" class="footer__nav-link">Инвестиции</a>
-                    </li>
-                    <li class="footer__nav-item">
-                      <a href="#" class="footer__nav-link">Проекты</a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="footer__nav-bar footer__nav-bar_two">
-                  <ul class="footer__nav">
-                    <li class="footer__nav-item">
-                      <a href="#" class="footer__nav-link">Социальная ответственность</a>
-                    </li>
-                    <li class="footer__nav-item">
-                      <a href="#" class="footer__nav-link">Образовательные проекты</a>
-                    </li>
-                    <li class="footer__nav-item">
-                      <a href="#" class="footer__nav-link">Управление</a>
-                    </li>
-                    <li class="footer__nav-item">
-                      <a href="#" class="footer__nav-link">Стартапы</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-              <div class="footer__contacts">
-                <div class="footer__phone">
-                  <a href="tel:+74959884770" class="footer__phone-link">+7 495 988-47-70</a>
-                </div>
-                <div class="footer__mail">
-                  <a href="mailto:welcome@medinvest-group.ru" class="footer__mail-link">welcome@medinvest-group.ru</a>
-                </div>
-                <ul class="footer__social">
-                  <li class="footer__social-item">
-                    <a href="#" class="footer__social-link">
-                      <svg class="footer__social-icon" width="21" height="21">
-                        <use xlink:href="images/icons-sprite.svg#icon-facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="footer__social-item">
-                    <a href="#" class="footer__social-link">
-                      <svg class="footer__social-icon" width="24" height="14">
-                        <use xlink:href="images/icons-sprite.svg#icon-vk"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </footer>
-        <!-- End (footer) -->
+        @include('./include/footer.html');
       </div>
     </div>
     <!-- End (wrapper) -->
+    @include('./include/nav.html');
+    @include('./include/modals.html');
     @include('./include/scripts.html');
   </body>
 </html>
