add nginx, new page map

--- a/dev/index.html
+++ b/dev/index.html
@@ -168,13 +168,28 @@
               <p class="programs__description">ГК МедИнвестГрупп запустила федеральный проект по подготовке кадров</p>
               <div class="programs__list">
                 <div class="programs__item">
-                  <a href="#" class="programs__item-link">Стажировки</a>
+                  <div class="programs__item-link">
+                    <svg class="programs__item-link__icon">
+                      <use xlink:href="images/icons-sprite.svg#icon-stage"></use>
+                    </svg>
+                    Программы для<br/> студентов и ординаторов
+                  </div>
                 </div>
                 <div class="programs__item">
-                  <a href="#" class="programs__item-link">Профессиональная <br>переподготовка</a>
+                  <div class="programs__item-link">
+                    <svg class="programs__item-link__icon">
+                      <use xlink:href="images/icons-sprite.svg#icon-retraining"></use>
+                    </svg>
+                    Профессиональная <br>переподготовка
+                  </div>
                 </div>
                 <div class="programs__item">
-                  <a href="#" class="programs__item-link">Сотрудничество <br>с ВУЗами</a>
+                  <div class="programs__item-link">
+                    <svg class="programs__item-link__icon">
+                      <use xlink:href="images/icons-sprite.svg#icon-education"></use>
+                    </svg>
+                    Сотрудничество <br>с ВУЗами
+                  </div>
                 </div>
               </div>
             </div>
