--- a/dev/projects.html
+++ b/dev/projects.html
@@ -27,17 +27,15 @@
         <!-- (content-projects) -->
         <main class="content-projects cover">
           <div class="content-projects__text">
-            <div class="content-projects__text-img-block">
-              <div class="content-projects__text-img-cover">
-                <div class="content-projects__text-img-wrapper">
-                  <img src="images/content/img-text-1.jpg" alt="Онкология. Ядерная медицина" class="content-projects__text-img">
-                </div>
-              </div>
-            </div>
             <div class="content-projects__text-cover-description">
               <div class="content-projects__text-description">
-                <p>Информационная система онкологического мониторинга «ОНКОР» разработана в России и имеет успешный опыт использования с 2016 года. Система предназначена для информатизации онкологической службы региона и позволяет вести сбор, учет и анализ данных о пациенте в течение всего срока его диагностики, лечения и наблюдения. Возможности системы включают организацию обмена информацией между подразделениями онкологической службы, ведение специализированной электронной истории болезни пациента, контроль сроков и полноты обследования пациента, контроль соблюдения стандартов лечения и наблюдения, интеграцию с локальными медицинскими информационными системами, формирование статистических и аналитических отчетов.</p>
+                <img src="images/content/icon-onkor.png" width="200" />
+                <p>ПК «ОНКОР» разработан в России и имеет успешный опыт использования с 2016 года в лечебных учреждениях. «ОНКОР» обеспечивает полную маршрутизацию пациента от  первичного приема врача-онколога и ведение по всем этапам получения медицинских услуг. Система обеспечивает проведение онкологических скринингов, является основой для формирования центров онкологического мониторинга и референтных центров по лучевой и морфологической диагностике. </p>
+                 <p>Программный комплекс ОНКОР  позволяет настроить интеграцию к любой  МИС в медицинских учреждениях, а также может ,использовать в качестве самостоятельного решения для управления онкологической службой региона, ив качестве онкологического сервиса на базе внедряемой РМИС. Позволяет онлайн получать полную и детализированную информацию об онкологической ситуации в регионе.</p>
               </div>
+            </div>
+            <div class="content-projects__text-img-block">
+              <img src="images/content/icon-laptop.jpg" alt="Онкология. Ядерная медицина" class="content-projects__text-img">
             </div>
           </div>
           <div class="content-projects__goals">
